--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,3 +42,8 @@ set_user_kubeconfig: true
 
 set_host_kubeconfig: false
 host_kubeconfig_dest: ~/.kube/config
+
+
+kubernetes_apt_release_channel: "stable"
+kubernetes_apt_keyring_file: "/etc/apt/keyrings/kubernetes-apt-keyring.asc"
+kubernetes_apt_repository: "deb [signed-by={{ kubernetes_apt_keyring_file }}] https://pkgs.k8s.io/core:/{{ kubernetes_apt_release_channel }}:/v{{ kubernetes_version }}/deb/ /"
