--- a/tasks/global/prep-debian.yml
+++ b/tasks/global/prep-debian.yml
@@ -3,16 +3,27 @@
 # Install Kubernetes & Project Dependencies
 #
 
-- name: Add an apt signing key for Kubernetes
-  ansible.builtin.apt_key:
-    url: "{{ item }}"
-    state: present
-  with_items:
-    - https://packages.cloud.google.com/apt/doc/apt-key.gpg
+- name: Prepare apt keyring directory.
+  ansible.builtin.file:
+    path: "{{ kubernetes_apt_keyring_file | dirname }}"
+    state: directory
+    mode: 0755
 
-- name: Add apt repository for Kubernetes
+- name: Get Kubernetes apt key.
+  ansible.builtin.get_url:
+    url: "https://pkgs.k8s.io/core:/{{ kubernetes_apt_release_channel }}:/v{{ kubernetes_version }}/deb/Release.key"
+    dest: "{{ kubernetes_apt_keyring_file }}"
+    mode: '0644'
+    force: true
+
+- name: Be sure deprecated Kubernetes repository is absent.
+  file:
+    path: "/etc/apt/sources.list.d/apt_kubernetes_io.list"
+    state: absent
+
+- name: Add Kubernetes repository.
   ansible.builtin.apt_repository:
-    repo: "{{ item }}"
+    repo: "{{ kubernetes_apt_repository }}"
+    filename: pkgs_k8s_io
     state: present
-  with_items:
-    - deb https://apt.kubernetes.io/ kubernetes-xenial main
+    update_cache: true
