--- a/tasks/ha-api-network.yml
+++ b/tasks/ha-api-network.yml
@@ -58,8 +58,8 @@
     enabled: true
     state: started
 
-- name: Wait for API Reachability
-  ansible.builtin.wait_for:
-    host: "{{ vrrp_virtual_ip }}"
-    port: "{{ haproxy_listen_port }}"
-    delay: 2
+# - name: Wait for API Reachability
+#   ansible.builtin.wait_for:
+#     host: "{{ vrrp_virtual_ip }}"
+#     port: "{{ haproxy_listen_port }}"
+#     delay: 2
