Added restart kubelet handler

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,3 +9,8 @@
   ansible.builtin.service:
     name: containerd
     state: restarted
+
+- name: Restart kubelet
+  ansible.builtin.service:
+    name: kubelet
+    state: restarted
